fix: Increase gap for images from each other

--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ img.welcome-image {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    gap: 10px;
 }
 
 .content-images img {
